Funcionando mostrar bebidas/platillos Agregué imagenes en el menú de los botones FontFamily no lo toma al ejecutar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,9 @@
             android:name=".pbebidas.bebidasActivity"
             android:screenOrientation="portrait" />
 
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
 
     </application>
